--- a/src/FEhist Exp/100129/WF_01.ipynb
+++ b/src/FEhist Exp/100129/WF_01.ipynb
@@ -89,16 +89,16 @@
     {
      "data": {
       "text/html": [
-       "'Wed Aug 13 15:02:48 2025'"
+       "'Wed Aug 13 23:54:49 2025'"
       ],
       "text/latex": [
-       "'Wed Aug 13 15:02:48 2025'"
+       "'Wed Aug 13 23:54:49 2025'"
       ],
       "text/markdown": [
-       "'Wed Aug 13 15:02:48 2025'"
+       "'Wed Aug 13 23:54:49 2025'"
       ],
       "text/plain": [
-       "[1] \"Wed Aug 13 15:02:48 2025\""
+       "[1] \"Wed Aug 13 23:54:49 2025\""
       ]
      },
      "metadata": {},
@@ -126,8 +126,8 @@
        "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>Ncells</th><td> 656959</td><td>35.1</td><td>1439368</td><td>76.9</td><td>1439368</td><td>76.9</td></tr>\n",
-       "\t<tr><th scope=row>Vcells</th><td>1225061</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1924961</td><td>14.7</td></tr>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 656927</td><td>35.1</td><td>1439380</td><td>76.9</td><td>1431356</td><td>76.5</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1224883</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1924961</td><td>14.7</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -136,8 +136,8 @@
        "\\begin{tabular}{r|llllll}\n",
        "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
        "\\hline\n",
-       "\tNcells &  656959 & 35.1 & 1439368 & 76.9 & 1439368 & 76.9\\\\\n",
-       "\tVcells & 1225061 &  9.4 & 8388608 & 64.0 & 1924961 & 14.7\\\\\n",
+       "\tNcells &  656927 & 35.1 & 1439380 & 76.9 & 1431356 & 76.5\\\\\n",
+       "\tVcells & 1224883 &  9.4 & 8388608 & 64.0 & 1924961 & 14.7\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -146,14 +146,14 @@
        "\n",
        "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
        "|---|---|---|---|---|---|---|\n",
-       "| Ncells |  656959 | 35.1 | 1439368 | 76.9 | 1439368 | 76.9 |\n",
-       "| Vcells | 1225061 |  9.4 | 8388608 | 64.0 | 1924961 | 14.7 |\n",
+       "| Ncells |  656927 | 35.1 | 1439380 | 76.9 | 1431356 | 76.5 |\n",
+       "| Vcells | 1224883 |  9.4 | 8388608 | 64.0 | 1924961 | 14.7 |\n",
        "\n"
       ],
       "text/plain": [
        "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
-       "Ncells  656959 35.1 1439368    76.9 1439368  76.9\n",
-       "Vcells 1225061  9.4 8388608    64.0 1924961  14.7"
+       "Ncells  656927 35.1 1439380    76.9 1431356  76.5\n",
+       "Vcells 1224883  9.4 8388608    64.0 1924961  14.7"
       ]
      },
      "metadata": {},
@@ -5909,9 +5909,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   num_leaves min_data_in_leaf num_iterations\n",
-      "        <int>            <int>          <int>\n",
-      "1:        234             1426            804\n"
+      "   num_leaves min_data_in_leaf num_iterations feature_fraction\n",
+      "        <int>            <int>          <int>            <num>\n",
+      "1:        234             1426            804        0.4602169\n"
      ]
     }
    ],
@@ -5933,7 +5933,7 @@
     "# los mejores hiperparámetros son los que quedaron en el registro 1 de la tabla\n",
     "PARAM$out$lgbm$mejores_hiperparametros <- tb_bayesiana[\n",
     "  1, # el primero es el de mejor AUC\n",
-    "  list(num_leaves, min_data_in_leaf, num_iterations)\n",
+    "  list(num_leaves, min_data_in_leaf, num_iterations, feature_fraction)\n",
     "]\n",
     "\n",
     "print(PARAM$out$lgbm$mejores_hiperparametros)"
@@ -6229,7 +6229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 64,
    "id": "88ca61c8-fa24-4ce5-8be1-323aca018e8f",
    "metadata": {
     "id": "88ca61c8-fa24-4ce5-8be1-323aca018e8f"
@@ -6282,264 +6282,26 @@
       "Prediciendo y subiendo con semilla 479461 ...\n",
       "Successfully submitted to Data Mining, Analista Jr 2025A \n",
       "Successfully submitted to Data Mining, Analista Jr 2025A \n",
+      "Successfully submitted to Data Mining, Analista Jr 2025A \n",
+      "Successfully submitted to Data Mining, Analista Jr 2025A \n",
+      "Successfully submitted to Data Mining, Analista Jr 2025A \n",
+      "Successfully submitted to Data Mining, Analista Jr 2025A \n",
+      "Successfully submitted to Data Mining, Analista Jr 2025A \n",
+      "Prediciendo y subiendo con semilla 197257 ...\n",
+      "Successfully submitted to Data Mining, Analista Jr 2025A \n",
+      "Successfully submitted to Data Mining, Analista Jr 2025A \n",
+      "Successfully submitted to Data Mining, Analista Jr 2025A \n",
+      "Successfully submitted to Data Mining, Analista Jr 2025A \n",
+      "Successfully submitted to Data Mining, Analista Jr 2025A \n",
+      "Successfully submitted to Data Mining, Analista Jr 2025A \n",
+      "Successfully submitted to Data Mining, Analista Jr 2025A \n",
+      "Prediciendo y subiendo con semilla 481387 ...\n",
+      "Successfully submitted to Data Mining, Analista Jr 2025A \n",
+      "Successfully submitted to Data Mining, Analista Jr 2025A \n",
+      "Successfully submitted to Data Mining, Analista Jr 2025A \n",
+      "Successfully submitted to Data Mining, Analista Jr 2025A \n",
+      "Successfully submitted to Data Mining, Analista Jr 2025A \n",
       "Successfully submitted to Data Mining, Analista Jr 2025A \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in system(linea, intern = TRUE):\n",
-      "“running command 'kaggle competitions submit -c data-mining-analista-jr-2025-a -f ./kaggle/KA910001100129_sem479461_2100.csv -m 'envios=2100  semilla=479461'' had status 1”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "429 Client Error: Too Many Requests for url: https://www.kaggle.com/api/v1/competitions/submissions/submit/data-mining-analista-jr-2025-a \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in system(linea, intern = TRUE):\n",
-      "“running command 'kaggle competitions submit -c data-mining-analista-jr-2025-a -f ./kaggle/KA910001100129_sem479461_2200.csv -m 'envios=2200  semilla=479461'' had status 1”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "429 Client Error: Too Many Requests for url: https://www.kaggle.com/api/v1/competitions/submissions/submit/data-mining-analista-jr-2025-a \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in system(linea, intern = TRUE):\n",
-      "“running command 'kaggle competitions submit -c data-mining-analista-jr-2025-a -f ./kaggle/KA910001100129_sem479461_2300.csv -m 'envios=2300  semilla=479461'' had status 1”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "429 Client Error: Too Many Requests for url: https://www.kaggle.com/api/v1/competitions/submissions/submit/data-mining-analista-jr-2025-a \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in system(linea, intern = TRUE):\n",
-      "“running command 'kaggle competitions submit -c data-mining-analista-jr-2025-a -f ./kaggle/KA910001100129_sem479461_2400.csv -m 'envios=2400  semilla=479461'' had status 1”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "429 Client Error: Too Many Requests for url: https://www.kaggle.com/api/v1/competitions/submissions/submit/data-mining-analista-jr-2025-a \n",
-      "Prediciendo y subiendo con semilla 197257 ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in system(linea, intern = TRUE):\n",
-      "“running command 'kaggle competitions submit -c data-mining-analista-jr-2025-a -f ./kaggle/KA910001100129_sem197257_1800.csv -m 'envios=1800  semilla=197257'' had status 1”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "429 Client Error: Too Many Requests for url: https://www.kaggle.com/api/v1/competitions/submissions/submit/data-mining-analista-jr-2025-a \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in system(linea, intern = TRUE):\n",
-      "“running command 'kaggle competitions submit -c data-mining-analista-jr-2025-a -f ./kaggle/KA910001100129_sem197257_1900.csv -m 'envios=1900  semilla=197257'' had status 1”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "429 Client Error: Too Many Requests for url: https://www.kaggle.com/api/v1/competitions/submissions/submit/data-mining-analista-jr-2025-a \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in system(linea, intern = TRUE):\n",
-      "“running command 'kaggle competitions submit -c data-mining-analista-jr-2025-a -f ./kaggle/KA910001100129_sem197257_2000.csv -m 'envios=2000  semilla=197257'' had status 1”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "429 Client Error: Too Many Requests for url: https://www.kaggle.com/api/v1/competitions/submissions/submit/data-mining-analista-jr-2025-a \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in system(linea, intern = TRUE):\n",
-      "“running command 'kaggle competitions submit -c data-mining-analista-jr-2025-a -f ./kaggle/KA910001100129_sem197257_2100.csv -m 'envios=2100  semilla=197257'' had status 1”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "429 Client Error: Too Many Requests for url: https://www.kaggle.com/api/v1/competitions/submissions/submit/data-mining-analista-jr-2025-a \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in system(linea, intern = TRUE):\n",
-      "“running command 'kaggle competitions submit -c data-mining-analista-jr-2025-a -f ./kaggle/KA910001100129_sem197257_2200.csv -m 'envios=2200  semilla=197257'' had status 1”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "429 Client Error: Too Many Requests for url: https://www.kaggle.com/api/v1/competitions/submissions/submit/data-mining-analista-jr-2025-a \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in system(linea, intern = TRUE):\n",
-      "“running command 'kaggle competitions submit -c data-mining-analista-jr-2025-a -f ./kaggle/KA910001100129_sem197257_2300.csv -m 'envios=2300  semilla=197257'' had status 1”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "429 Client Error: Too Many Requests for url: https://www.kaggle.com/api/v1/competitions/submissions/submit/data-mining-analista-jr-2025-a \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in system(linea, intern = TRUE):\n",
-      "“running command 'kaggle competitions submit -c data-mining-analista-jr-2025-a -f ./kaggle/KA910001100129_sem197257_2400.csv -m 'envios=2400  semilla=197257'' had status 1”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "429 Client Error: Too Many Requests for url: https://www.kaggle.com/api/v1/competitions/submissions/submit/data-mining-analista-jr-2025-a \n",
-      "Prediciendo y subiendo con semilla 481387 ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in system(linea, intern = TRUE):\n",
-      "“running command 'kaggle competitions submit -c data-mining-analista-jr-2025-a -f ./kaggle/KA910001100129_sem481387_1800.csv -m 'envios=1800  semilla=481387'' had status 1”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "429 Client Error: Too Many Requests for url: https://www.kaggle.com/api/v1/competitions/submissions/submit/data-mining-analista-jr-2025-a \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in system(linea, intern = TRUE):\n",
-      "“running command 'kaggle competitions submit -c data-mining-analista-jr-2025-a -f ./kaggle/KA910001100129_sem481387_1900.csv -m 'envios=1900  semilla=481387'' had status 1”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "429 Client Error: Too Many Requests for url: https://www.kaggle.com/api/v1/competitions/submissions/submit/data-mining-analista-jr-2025-a \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in system(linea, intern = TRUE):\n",
-      "“running command 'kaggle competitions submit -c data-mining-analista-jr-2025-a -f ./kaggle/KA910001100129_sem481387_2000.csv -m 'envios=2000  semilla=481387'' had status 1”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "429 Client Error: Too Many Requests for url: https://www.kaggle.com/api/v1/competitions/submissions/submit/data-mining-analista-jr-2025-a \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in system(linea, intern = TRUE):\n",
-      "“running command 'kaggle competitions submit -c data-mining-analista-jr-2025-a -f ./kaggle/KA910001100129_sem481387_2100.csv -m 'envios=2100  semilla=481387'' had status 1”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "429 Client Error: Too Many Requests for url: https://www.kaggle.com/api/v1/competitions/submissions/submit/data-mining-analista-jr-2025-a \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in system(linea, intern = TRUE):\n",
-      "“running command 'kaggle competitions submit -c data-mining-analista-jr-2025-a -f ./kaggle/KA910001100129_sem481387_2200.csv -m 'envios=2200  semilla=481387'' had status 1”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "429 Client Error: Too Many Requests for url: https://www.kaggle.com/api/v1/competitions/submissions/submit/data-mining-analista-jr-2025-a \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in system(linea, intern = TRUE):\n",
-      "“running command 'kaggle competitions submit -c data-mining-analista-jr-2025-a -f ./kaggle/KA910001100129_sem481387_2300.csv -m 'envios=2300  semilla=481387'' had status 1”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "429 Client Error: Too Many Requests for url: https://www.kaggle.com/api/v1/competitions/submissions/submit/data-mining-analista-jr-2025-a \n"
      ]
     },
     {
@@ -6625,6 +6387,43 @@
       "Warning message in system(linea, intern = TRUE):\n",
       "“running command 'kaggle competitions submit -c data-mining-analista-jr-2025-a -f ./kaggle/KA910001100129_sem267037_2200.csv -m 'envios=2200  semilla=267037'' had status 1”\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "429 Client Error: Too Many Requests for url: https://www.kaggle.com/api/v1/competitions/submissions/submit/data-mining-analista-jr-2025-a \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in system(linea, intern = TRUE):\n",
+      "“running command 'kaggle competitions submit -c data-mining-analista-jr-2025-a -f ./kaggle/KA910001100129_sem267037_2300.csv -m 'envios=2300  semilla=267037'' had status 1”\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "429 Client Error: Too Many Requests for url: https://www.kaggle.com/api/v1/competitions/submissions/submit/data-mining-analista-jr-2025-a \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in system(linea, intern = TRUE):\n",
+      "“running command 'kaggle competitions submit -c data-mining-analista-jr-2025-a -f ./kaggle/KA910001100129_sem267037_2400.csv -m 'envios=2400  semilla=267037'' had status 1”\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "429 Client Error: Too Many Requests for url: https://www.kaggle.com/api/v1/competitions/submissions/submit/data-mining-analista-jr-2025-a \n"
+     ]
     }
    ],
    "source": [
@@ -6682,18 +6481,27 @@
     "  \n",
     "  rm(final_model, prediccion, tb_prediccion)\n",
     "  gc(full = TRUE, verbose = FALSE)\n",
-    "  Sys.sleep(10)\n",
+    "  Sys.sleep(30)\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "C94tK-xid6p2",
    "metadata": {
     "id": "C94tK-xid6p2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: yaml\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# grabo los parametros\n",
     "if( !require(\"yaml\")) install.packages(\"yaml\")\n",
@@ -6704,12 +6512,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "1b615a62-20cc-4e95-9af2-6b6db38d5efb",
    "metadata": {
     "id": "1b615a62-20cc-4e95-9af2-6b6db38d5efb"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'Thu Aug 14 00:38:54 2025'"
+      ],
+      "text/latex": [
+       "'Thu Aug 14 00:38:54 2025'"
+      ],
+      "text/markdown": [
+       "'Thu Aug 14 00:38:54 2025'"
+      ],
+      "text/plain": [
+       "[1] \"Thu Aug 14 00:38:54 2025\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "format(Sys.time(), \"%a %b %d %X %Y\")"
    ]
