corrijo todos los experimentos

--- a/src/FEhist Exp/100129/WF_10.ipynb
+++ b/src/FEhist Exp/100129/WF_10.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cb9402b0-82f1-43e3-bc4b-9236c9be273b",
    "metadata": {},
    "outputs": [],
@@ -1959,7 +1959,7 @@
     "# los mejores hiperparámetros son los que quedaron en el registro 1 de la tabla\n",
     "PARAM$out$lgbm$mejores_hiperparametros <- tb_bayesiana[\n",
     "  1, # el primero es el de mejor AUC\n",
-    "  list(num_leaves, min_data_in_leaf, num_iterations)\n",
+    "  list(num_leaves, min_data_in_leaf, num_iterations, feature_fraction)\n",
     "]\n",
     "\n",
     "print(PARAM$out$lgbm$mejores_hiperparametros)"
@@ -2074,16 +2074,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea98bc04-4b33-4d28-83aa-b841e2961e3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PARAM$FT$semillerio <- 20  # cantidad de semillas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e6dca0b7-f032-4c0e-acec-ca05d6dd2159",
    "metadata": {},
    "outputs": [],
@@ -2099,10 +2089,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "primos <- generate_primes(min = 100000, max = 1000000)\n",
-    "set.seed(PARAM$semilla_primigenia, kind = \"L'Ecuyer-CMRG\")\n",
+    "# primos <- generate_primes(min = 100000, max = 1000000)\n",
+    "# set.seed(PARAM$semilla_primigenia, kind = \"L'Ecuyer-CMRG\")\n",
     "# me quedo con PARAM$semillerio  primos al azar\n",
-    "PARAM$FT$semillas <- sample(primos)[seq(PARAM$FT$semillerio)]\n",
+    "# PARAM$FT$semillas <- sample(primos)[seq(PARAM$FT$semillerio)]\n",
+    "\n",
+    "PARAM$FT$semillas <- c(\n",
+    "  100129,\n",
+    "  200003,\n",
+    "  350381,\n",
+    "  550061,\n",
+    "  900001,\n",
+    "  479461,\n",
+    "  197257\n",
+    ") # ACÁ AGREGAR LAS SEMILLAS QUE HAGAN FALTA\n",
     "\n",
     "cat( PARAM$FT$semillas)"
    ]
@@ -2116,42 +2116,45 @@
    },
    "outputs": [],
    "source": [
+    "# ============================================\n",
+    "# FASE 1: ENTRENAR Y GUARDAR MODELOS\n",
+    "# ============================================\n",
     "dir.create(\"modelos\", showWarnings =FALSE)\n",
     "\n",
     "primero <- TRUE\n",
-    "for( sem in PARAM$FT$semillas)\n",
-    "{\n",
-    "  nombre_arch <- paste0( \"./modelos/modelo_\", sem, \".txt\")\n",
-    "  if( !file.exists(nombre_arch) )\n",
-    "  {\n",
+    "for (sem in PARAM$FT$semillas) { # por cada semilla\n",
+    "  nombre_arch <- paste0(\"./modelos/modelo_\", sem, \".txt\") # creo un archivo llamado \"modelo_{SEMILLA}\"\n",
+    "  \n",
+    "  if (!file.exists(nombre_arch)) {\n",
+    "    cat(\"Entrenando modelo con semilla\", sem, \"...\\n\")\n",
+    "    \n",
     "    param_final$seed <- sem\n",
-    "\n",
     "    set.seed(sem, kind = \"L'Ecuyer-CMRG\")\n",
+    "    \n",
     "    final_model <- lgb.train(\n",
-    "      data= dfinal_train,\n",
-    "      param= param_final,\n",
-    "      verbose= -100\n",
-    "    )\n",
-    "\n",
-    "    lgb.save(final_model, nombre_arch) # grabo el modelo\"\n",
-    "\n",
-    "    # grabo la primer importancia de variables\n",
-    "    #  Natalia : da lo mismo cual se guarda\n",
-    "    if( primero)\n",
-    "    {\n",
+    "      data = dfinal_train,\n",
+    "      param = param_final,\n",
+    "      verbose = -100\n",
+    "    ) # entreno el modelo para esa semilla\n",
+    "    \n",
+    "    lgb.save(final_model, nombre_arch) # guardo el modelo dentro del archivo\n",
+    "    \n",
+    "    # Guardar importancia de variables solo la primera vez\n",
+    "    if (primero) {\n",
     "      primero <- FALSE\n",
     "      tb_importancia <- as.data.table(lgb.importance(final_model))\n",
-    "      archivo_importancia <- \"impo.txt\"\n",
-    "\n",
-    "      fwrite( tb_importancia,\n",
-    "        file= archivo_importancia,\n",
-    "        sep= \"\\t\"\n",
+    "      fwrite(tb_importancia,\n",
+    "             file = \"impo.txt\",\n",
+    "             sep = \"\\t\"\n",
     "      )\n",
     "    }\n",
-    " }\n",
+    "    \n",
+    "    rm(final_model) # borro de la memoria el modelo recien entrenado (porque ya lo guardé en el archivo)\n",
+    "    gc(full = TRUE, verbose = FALSE) # llamo al Garbage Collector para limpiar la memoria\n",
+    "  }\n",
     "}\n",
     "\n",
-    "notificar(\"Semillerío Finalizado\")"
+    "notificar(\"Final train Finalizado\")"
    ]
   },
   {
@@ -2197,139 +2200,62 @@
    },
    "outputs": [],
    "source": [
-    "# aplico final_model   a dfuture\n",
-    "\n",
-    "tb_prediccion <- dfuture[, list(numero_de_cliente)]\n",
-    "tb_prediccion[, prob := 0]\n",
+    "# ============================================\n",
+    "# FASE 2: PREDICCIÓN Y SUBMIT POR CADA SEMILLA\n",
+    "# ============================================\n",
     "\n",
     "datos_matrix <- data.matrix(dfuture[, campos_buenos, with= FALSE])\n",
+    "PARAM$kaggle$competencia <- \"data-mining-analista-jr-2025-a\"  # revisar exacto slug de Kaggle\n",
     "\n",
     "\n",
-    "for( isem in seq(length(PARAM$FT$semillas)) ) # Recorro cada semilla generada\n",
-    "{\n",
-    "   sem <- PARAM$FT$semillas[ isem ]\n",
-    "   nombre_arch <- paste0( \"./modelos/modelo_\", sem, \".txt\") \n",
-    "   final_model <- lgb.load(nombre_arch) # capturo el modelo construido con esa semilla\n",
-    "   # hago la prediccion con ese modelo \n",
-    "   prediccion <- predict(\n",
-    "     final_model,\n",
-    "     datos_matrix\n",
-    "  )\n",
-    "\n",
-    "  tb_prediccion[, paste0(\"prob_\", isem) := prediccion]\n",
-    "  tb_prediccion[, prob := prob + prediccion]\n",
-    "\n",
-    "  rm(final_model)\n",
-    "  rm(prediccion)\n",
-    "  gc(full = TRUE, verbose=FALSE)\n",
-    "}\n",
-    "\n",
-    "rm( datos_matrix)\n",
-    "gc(full = TRUE, verbose=FALSE)\n",
-    "\n",
-    "tb_prediccion[, prob := prob /length(PARAM$FT$semillas) ]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "79u0ZvjJZblE",
-   "metadata": {
-    "id": "79u0ZvjJZblE"
-   },
-   "source": [
-    "##### Tabla Prediccion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "TB6aerGDZeTo",
-   "metadata": {
-    "id": "TB6aerGDZeTo"
-   },
-   "outputs": [],
-   "source": [
-    "# veo que hay en tb_prediccion\n",
-    "tb_prediccion\n",
-    "\n",
-    "# grabo las probabilidad del modelo\n",
-    "#  me va a ser util para hacer Ensembles de modelos\n",
-    "fwrite(tb_prediccion,\n",
-    "  file= \"prediccion.txt\",\n",
-    "  sep= \"\\t\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8412d838-5bd5-454e-b3a9-5eaa18d80a50",
-   "metadata": {
-    "id": "8412d838-5bd5-454e-b3a9-5eaa18d80a50"
-   },
-   "source": [
-    "#### Kaggle Competition Submit"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "55970cb6-856a-46e3-a893-7f36b8352b8e",
-   "metadata": {
-    "id": "55970cb6-856a-46e3-a893-7f36b8352b8e"
-   },
-   "source": [
-    "Genero las salidas y hago los submits a Kaggle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5fa2439-b0e9-49e0-a861-71d7315d6e1c",
-   "metadata": {
-    "id": "e5fa2439-b0e9-49e0-a861-71d7315d6e1c"
-   },
-   "outputs": [],
-   "source": [
-    "# genero archivos con los  \"envios\" mejores\n",
-    "# suba TODOS los archivos a Kaggle\n",
-    "\n",
-    "PARAM$kaggle$competencia <- \"data-mining-analista-jr-2025-a\"\n",
-    "PARAM$kaggle$cortes <- seq(1800, 2400, by = 100)\n",
-    "\n",
-    "# ordeno por probabilidad descendente\n",
-    "setorder(tb_prediccion, -prob)\n",
-    "\n",
-    "dir.create(\"kaggle\")\n",
-    "\n",
-    "for (envios in PARAM$kaggle$cortes) {\n",
-    "\n",
-    "  tb_prediccion[, Predicted := 0L] # seteo inicial a 0\n",
-    "  tb_prediccion[1:envios, Predicted := 1L] # marclo los primeros\n",
-    "\n",
-    "  archivo_kaggle <- paste0(\n",
-    "    \"./kaggle/KA\",\n",
-    "    PARAM$experimento, \"_\",\n",
-    "    \"s\", length(PARAM$FT$semillas), \"_\",\n",
-    "    envios, \".csv\")\n",
-    "\n",
-    "  # grabo el archivo\n",
-    "  fwrite(tb_prediccion[, list(numero_de_cliente, Predicted)],\n",
-    "    file= archivo_kaggle,\n",
-    "    sep= \",\"\n",
-    "  )\n",
-    "\n",
-    "  # subida a Kaggle, armo la linea de comando\n",
-    "  comando <- \"kaggle competitions submit\"\n",
-    "  competencia <- paste(\"-c\", PARAM$kaggle$competencia)\n",
-    "  arch <- paste( \"-f\", archivo_kaggle)\n",
-    "\n",
-    "  mensaje <- paste0(\"-m 'envios=\", envios,\n",
-    "  \"  semilla=\", PARAM$semilla_primigenia,\n",
-    "    \"'\" )\n",
-    "\n",
-    "  linea <- paste( comando, competencia, arch, mensaje)\n",
-    "\n",
-    "  salida <- system(linea, intern=TRUE) # el submit a Kaggle\n",
-    "  cat(salida, \"\\n\")\n",
+    "for (sem in PARAM$FT$semillas) {\n",
+    "  cat(\"Prediciendo y subiendo con semilla\", sem, \"...\\n\")\n",
+    "  \n",
+    "  nombre_arch <- paste0(\"./modelos/modelo_\", sem, \".txt\") # leo el archivo en el que guardé el modelo entrenado con la semilla\n",
+    "  final_model <- lgb.load(nombre_arch) # lo cargo en la variable \"final_model\"\n",
+    "  \n",
+    "  prediccion <- predict(final_model, datos_matrix) # hago la predicción sobre los datos del futuro\n",
+    "  \n",
+    "  tb_prediccion <- dfuture[, list(numero_de_cliente)] \n",
+    "  tb_prediccion[, prob := prediccion] # guardo en tb_prediccion la prediccion realizada con el modelo\n",
+    "  \n",
+    "  setorder(tb_prediccion, -prob)\n",
+    "  \n",
+    "  # subir para cada corte la predicción hecha con el modelo de la semilla\n",
+    "  PARAM$kaggle$cortes <- seq(1800, 2400, by = 100)\n",
+    "  dir.create(\"kaggle\", showWarnings = FALSE)\n",
+    "  for (envios in PARAM$kaggle$cortes) {\n",
+    "    tb_prediccion[, Predicted := 0L]\n",
+    "    tb_prediccion[1:envios, Predicted := 1L]\n",
+    "    \n",
+    "    archivo_kaggle <- paste0(\n",
+    "      \"./kaggle/KA\",\n",
+    "      PARAM$experimento, \"_\",\n",
+    "      \"sem\", sem, \"_\",\n",
+    "      envios, \".csv\"\n",
+    "    )\n",
+    "    \n",
+    "    fwrite(tb_prediccion[, list(numero_de_cliente, Predicted)],\n",
+    "           file = archivo_kaggle,\n",
+    "           sep = \",\"\n",
+    "    )\n",
+    "    \n",
+    "    # Subir a Kaggle\n",
+    "    comando <- \"kaggle competitions submit\"\n",
+    "    competencia <- paste(\"-c\", PARAM$kaggle$competencia)\n",
+    "    arch <- paste(\"-f\", archivo_kaggle)\n",
+    "    mensaje <- paste0(\"-m 'envios=\", envios,\n",
+    "                      \"  semilla=\", sem, \"'\")\n",
+    "    \n",
+    "    linea <- paste(comando, competencia, arch, mensaje)\n",
+    "    salida <- system(linea, intern = TRUE)\n",
+    "    cat(salida, \"\\n\")\n",
+    "    Sys.sleep(15)\n",
+    "  }\n",
+    "  \n",
+    "  rm(final_model, prediccion, tb_prediccion)\n",
+    "  gc(full = TRUE, verbose = FALSE)\n",
+    "  Sys.sleep(30)\n",
     "}"
    ]
   },
