idem anterior commit

--- a/src/FEhist Exp/100129/WF_06.ipynb
+++ b/src/FEhist Exp/100129/WF_06.ipynb
@@ -2291,29 +2291,30 @@
    "outputs": [],
    "source": [
     "# ============================================\n",
-    "# FASE 2: PREDICCIÓN Y SUBMIT POR CADA SEMILLA\n",
+    "# FASE 2: PREDICCIÓN Y CREACIÓN DE ARCHIVOS KAGGLE\n",
     "# ============================================\n",
     "\n",
-    "datos_matrix <- data.matrix(dfuture[, campos_buenos, with= FALSE])\n",
-    "PARAM$kaggle$competencia <- \"data-mining-analista-jr-2025-a\"  # revisar exacto slug de Kaggle\n",
+    "datos_matrix <- data.matrix(dfuture[, campos_buenos, with=FALSE])\n",
+    "PARAM$kaggle$competencia <- \"data-mining-analista-jr-2025-a\"  # revisar slug exacto de Kaggle\n",
     "\n",
+    "# Lista para guardar los nombres de archivos generados\n",
+    "archivos_generados <- list()\n",
     "\n",
     "for (sem in PARAM$FT$semillas) {\n",
-    "  cat(\"Prediciendo y subiendo con semilla\", sem, \"...\\n\")\n",
+    "  cat(\"Generando predicciones con semilla\", sem, \"...\\n\")\n",
     "  \n",
-    "  nombre_arch <- paste0(\"./modelos/modelo_\", sem, \".txt\") # leo el archivo en el que guardé el modelo entrenado con la semilla\n",
-    "  final_model <- lgb.load(nombre_arch) # lo cargo en la variable \"final_model\"\n",
+    "  nombre_arch <- paste0(\"./modelos/modelo_\", sem, \".txt\")\n",
+    "  final_model <- lgb.load(nombre_arch)\n",
     "  \n",
-    "  prediccion <- predict(final_model, datos_matrix) # hago la predicción sobre los datos del futuro\n",
+    "  prediccion <- predict(final_model, datos_matrix)\n",
     "  \n",
-    "  tb_prediccion <- dfuture[, list(numero_de_cliente)] \n",
-    "  tb_prediccion[, prob := prediccion] # guardo en tb_prediccion la prediccion realizada con el modelo\n",
-    "  \n",
+    "  tb_prediccion <- dfuture[, list(numero_de_cliente)]\n",
+    "  tb_prediccion[, prob := prediccion]\n",
     "  setorder(tb_prediccion, -prob)\n",
     "  \n",
-    "  # subir para cada corte la predicción hecha con el modelo de la semilla\n",
-    "  PARAM$kaggle$cortes <- seq(1800, 2400, by = 100)\n",
-    "  dir.create(\"kaggle\", showWarnings = FALSE)\n",
+    "  PARAM$kaggle$cortes <- seq(1800, 2400, by=100)\n",
+    "  dir.create(\"kaggle\", showWarnings=FALSE)\n",
+    "  \n",
     "  for (envios in PARAM$kaggle$cortes) {\n",
     "    tb_prediccion[, Predicted := 0L]\n",
     "    tb_prediccion[1:envios, Predicted := 1L]\n",
@@ -2326,27 +2327,50 @@
     "    )\n",
     "    \n",
     "    fwrite(tb_prediccion[, list(numero_de_cliente, Predicted)],\n",
-    "           file = archivo_kaggle,\n",
-    "           sep = \",\"\n",
+    "           file=archivo_kaggle,\n",
+    "           sep=\",\"\n",
     "    )\n",
     "    \n",
-    "    # Subir a Kaggle\n",
-    "    comando <- \"kaggle competitions submit\"\n",
-    "    competencia <- paste(\"-c\", PARAM$kaggle$competencia)\n",
-    "    arch <- paste(\"-f\", archivo_kaggle)\n",
-    "    mensaje <- paste0(\"-m 'envios=\", envios,\n",
-    "                      \"  semilla=\", sem, \"'\")\n",
-    "    \n",
-    "    linea <- paste(comando, competencia, arch, mensaje)\n",
-    "    salida <- system(linea, intern = TRUE)\n",
-    "    cat(salida, \"\\n\")\n",
-    "    Sys.sleep(15)\n",
+    "    # Guardar el archivo en la lista\n",
+    "    archivos_generados <- append(archivos_generados, archivo_kaggle)\n",
     "  }\n",
     "  \n",
     "  rm(final_model, prediccion, tb_prediccion)\n",
-    "  gc(full = TRUE, verbose = FALSE)\n",
-    "  Sys.sleep(30)\n",
-    "}"
+    "  gc(full=TRUE, verbose=FALSE)\n",
+    "}\n",
+    "\n",
+    "# Mostrar archivos generados\n",
+    "print(archivos_generados)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ea44fdf-a073-420a-b278-f7bad134a04b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============================================\n",
+    "# FASE 3: SUBMIT A KAGGLE\n",
+    "# ============================================\n",
+    "\n",
+    "#for (archivo_kaggle in archivos_generados) {\n",
+    "  # Extraer datos del nombre de archivo\n",
+    "#  partes <- strsplit(basename(archivo_kaggle), \"_\")[[1]]\n",
+    "#  sem <- sub(\"sem\", \"\", partes[2])\n",
+    "#  envios <- sub(\"\\\\.csv\", \"\", partes[3])\n",
+    "  \n",
+    "#  comando <- \"kaggle competitions submit\"\n",
+    "#  competencia <- paste(\"-c\", PARAM$kaggle$competencia)\n",
+    "#  arch <- paste(\"-f\", archivo_kaggle)\n",
+    "#  mensaje <- paste0(\"-m 'envios=\", envios, \"  semilla=\", sem, \"'\")\n",
+    "  \n",
+    "#  linea <- paste(comando, competencia, arch, mensaje)\n",
+    "#  salida <- system(linea, intern=TRUE)\n",
+    "#  cat(salida, \"\\n\")\n",
+    "  \n",
+    "#  Sys.sleep(10)\n",
+    "#}"
    ]
   },
   {
